--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
+    "@xstate/react": "^6.0.0",
+    "autoprefixer": "^10.4.23",
+    "chart.js": "^4.5.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "mqtt": "^5.14.1",
+    "nodemailer": "^7.0.12",
+    "postcss": "^8.5.6",
     "react": "^19.2.3",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "tailwindcss": "^4.1.18",
+    "web-vitals": "^2.1.4",
+    "xstate": "^5.25.0"
   },
   "scripts": {
     "start": "react-scripts start",
