--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ HTTPS=true
 GMAIL_USER=youarebearpromax@gmail.com
 GMAIL_APP_PASSWORD=xzqa fbhj hujz gkjb
 PORT=3001
+HOST=0.0.0.0
+DANGEROUSLY_DISABLE_HOST_CHECK=true
