--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "ip": "^2.0.1",
     "mqtt": "^5.14.1",
+    "multicast-dns": "^7.2.5",
     "nodemailer": "^7.0.12",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
@@ -47,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^2.0.6"
   }
 }
