--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HTTPS=true
 GMAIL_USER=youarebearpromax@gmail.com
-GMAIL_APP_PASSWORD=xzqa fbhj hujz gkjb
-PORT=3001
+GMAIL_APP_PASSWORD=xzqafbhjhujzgkjb
+PORT=3005
 HOST=0.0.0.0
 DANGEROUSLY_DISABLE_HOST_CHECK=true
